--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "react-dom": "^18",
     "react-icons": "^5.2.0",
     "swiper": "^11.1.1"
+    
+  },
+  "devDependencies": {
+    "video.js": "^8.17.3"
   }
 }
